<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">pagarplus</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_add_upi_id">ADD UPI ID</string>
<string name="lbl_mobile_number">Mobile Number</string>
<string name="lbl_ifsc_code">IFSC Code</string>
<string name="lbl_account_number">Account Number</string>
<string name="lbl_submit">Submit</string>
<string name="lbl_email_id">Email ID</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl_bank_details">Bank Details</string>
<string name="lbl_password">Password</string>
<string name="msg_account_holder">Account Holder Name</string>
<string name="lbl_full_name">Full Name</string>
<string name="msg_confirm_account">Confirm Account Number</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_nu">Please enter valid number</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
