<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="adminpaymentVM" type="com.pagarplus.app.modules.adminpayment.data.viewmodel.AdminpaymentVM"/>
    </data>
    <FrameLayout android:id="@+id/frameBankDetailsOn"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageUserBGTwo"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageUrl="@{adminpaymentVM.adminpaymentModel.imageUserBGTwo}"
            placeHolder="@{@drawable/image_not_found}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_userbg2_1"/>
        <LinearLayout android:id="@+id/linearColumnbankdetails"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_31pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700_7fcornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtBankDetails"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{adminpaymentVM.adminpaymentModel.txtBankDetails}"
                style="@style/txtRobotoromanmedium16" tools:text="@string/lbl_bank_details"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_full_name"
                android:id="@+id/etFullName" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etFullNameValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_mobile_number"
                android:id="@+id/etMobileNumber"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etMobileNumberValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_email_id"
                android:id="@+id/etEmailID"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etEmailIDValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_add_upi_id"
                android:id="@+id/etADDUPIID" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_17pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etADDUPIIDValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineThree"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_18pxv" android:layout_width="@dimen/_270pxh"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_account_holder"
                android:id="@+id/etAccountHolder"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etAccountHolderValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_account_number"
                android:id="@+id/etAccountNumber"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etAccountNumberValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_confirm_account"
                android:id="@+id/etConfirmAccount"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etConfirmAccountValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_ifsc_code"
                android:id="@+id/etIFSCCode" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etIFSCCodeValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etPasswordValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_confirm_passwor"
                android:id="@+id/etConfirmPasswor"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@={adminpaymentVM.adminpaymentModel.etConfirmPassworValue}"
                android:textColorHint="@color/black_900"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSubmit"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_30pxv"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="@dimen/_102pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_29pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_submit"
                android:textAllCaps="false"
                style="@style/btnGradientRounded" tools:text="@string/lbl_submit"/>
        </LinearLayout>
    </FrameLayout>
</layout>
